--- a/module3-solution/css/styles.css
+++ b/module3-solution/css/styles.css
@@ -1,43 +1,50 @@
+/* General page styling */
 body {
   font-size: 16px;
   color: black;
-  background:#80BE40;
   font-family: Arial, Helvetica, sans-serif
 }
 
-div.container {
-  width: 100%;
-  margin: 0 auto;
+/* Navigation bar header styling */
+#food-llc-brand { 
+    color: black;
+    margin: 0;
+    text-align: left;
+    font-size: 2em;
 }
-
+.navbar-brand a:hover, .navbar-brand a:focus {
+  text-decoration: none;
+}
+.navbar-header button.navbar-toggle, .navbar-header .icon-bar {
+  border: 1px solid black;
+}
 #header-nav {
     background-color: #47810B;
     border-radius: 0;
     border: 0;
 }
 
-
-#header-nav .navbar-brand { 
-    color: black;
+/* Collapsed navigation list styling */
+#nav-list {
+  background-color: #80BE40;
 }
-
-
-.navbar-header button.navbar-toggle, .navbar-header .icon-bar {
-  border: 1px solid black;
-}
-
 #nav-list a {
   color: black;
-  text-align: center;
-}
-#nav-list {
-    margin-top: 30px;
+   text-align: center;
 }
 #nav-list a:hover {
-  background: #80BE40;
-}
-.navbar-brand a:hover, .navbar-brand a:focus {
-  text-decoration: none;
+  background: #8F2C0D;
 }
 
+/* Text section styling */
+section#huge-section {
+  background-color: #80BE40;
+  margin: 15px;
+  padding: 10px;
+  font-size: 1.2em;
+}
+h2 {
+  padding-top: 30px;
+  padding-bottom: 10px;
+}
 
