--- a/module3-solution/css/styles.css
+++ b/module3-solution/css/styles.css
@@ -2,7 +2,7 @@
 body {
   font-size: 16px;
   color: black;
-  font-family: Arial, Helvetica, sans-serif
+  font-family: 'Indie Flower', cursive;
 }
 
 /* Navigation bar header styling */
@@ -37,14 +37,32 @@ body {
 }
 
 /* Text section styling */
-section#huge-section {
+section.menu-section {
   background-color: #80BE40;
   margin: 15px;
   padding: 10px;
   font-size: 1.2em;
+  border: 1px solid black; 
+  border-radius: 20px;
 }
 h2 {
   padding-top: 30px;
   padding-bottom: 10px;
+  font-style: italic;
+  text-decoration: underline;
+}
+
+.home-anchor, a:hover {
+  text-align: center;
+  width: 100%;
+  color: black;
+}
+
+footer.menu-footer {
+  font-size: 2em;
+  color: black;
+  text-align: center;
+  background-color: #47810B;
+  width: 100%;
 }
 
